gpt대화 화면으로 가는 버튼 추가 테스트용 대화 액티비티 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
             android:name=".MainActivity2"
             android:exported="false" />
         <activity
+            android:name=".gpt_mes_test"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
