캘린더 색상표시 둘중 한명만 운동완료=레드 둘다완료 = 그린

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
     id 'kotlin-parcelize'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -73,4 +74,10 @@ dependencies {
     //viewmodel
     implementation 'androidx.activity:activity-ktx:1.1.0'
     implementation 'androidx.fragment:fragment-ktx:1.2.5'
+    //Firebase Storage
+    implementation 'com.google.firebase:firebase-storage'
+    //flideApp
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
 }
